@@ -50,6 +50,9 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Improvements
 
+  df now filters the system mount list more efficiently, with 20000
+  mount entries now being processed in about 1.1s compared to 1.7s.
+
   install -Z now also sets the default SELinux context for created directories.
 
   stat and tail now know about "prl_fs" (a parallels file system),
